Revision 95 	 2010-11-23 	 Fix for groupname of staff mebers 
Revision 94 	 2010-11-23 	 Fix for groupname of staff mebers 
Revision 93 	 2010-11-21 	 Minor changes 
Revision 92 	 2010-11-18 	 Changing author name 
Revision 91 	 2010-11-13 	 Adding IE6NoMore 
Revision 90 	 2010-11-06 	 Doc related changes 
Revision 89 	 2010-11-02 	 Correction to install instructions 
Revision 88 	 2010-11-02 	 Small fix for git push in docs 
Revision 87 	 2010-11-01 	 Documentation related changes 
Revision 86 	 2010-11-01 	 Chaning hashlib import to make pylint happy 
Revision 85 	 2010-10-27 	 Small correction 
Revision 84 	 2010-10-27 	 removing version number of gdata from requirements as it is causing errors 
Revision 83 	 2010-10-27 	 Deployment related cleanup 
Revision 82 	 2010-10-21 	 Upgrading latest versions of requirements 
Revision 81 	 2010-10-21 	 Changes to requirements 
Revision 80 	 2010-10-19 	 Initialized Ditz bug database 
Revision 79 	 2010-10-19 	 Refactored some config stuff 
Revision 78 	 2010-09-15 	 Prettifying Student profile listing pages 
Revision 77 	 2010-09-09 	 Warning when navigating away from unsaved edit form 
Revision 76 	 2010-09-05 	 Cleanup of fabfile.py 
Revision 75 	 2010-09-05 	 Changing homepage for logged-in users 
Revision 74 	 2010-09-05 	 Changing theme of docs to natures as readthedocs.org does not support custom themes 
Revision 73 	 2010-09-04 	 Small change to docs 
Revision 72 	 2010-09-04 	 Using ADCtheme for documentation 
Revision 71 	 2010-08-30 	 Renaming README to README.rst 
Revision 70 	 2010-08-24 	 Chaging URL in main menu 
Revision 69 	 2010-08-24 	 Logout now logs out of Google Apps also 
Revision 68 	 2010-08-24 	 Small change to main menu 
Revision 67 	 2010-08-23 	 Password reset confirm form 
Revision 66 	 2010-08-23 	 Removing forcePasswordChange as it is not working 
Revision 65 	 2010-08-23 	 Removing forcePasswordChange as it is not working 
Revision 64 	 2010-08-23 	 small testing related changes 