@@ -1,3 +1,3 @@
 [program:pysis]
-command=/virtualenvs/pysis/bin/python /projects/pysis/deploy/pysis_fcgi.py
+command=/work/virtualenvs/pysis/bin/python /projects/pysis/deploy/pysis_fcgi.py
 user=www-data
