@@ -1,1 +1,0 @@
-/virtualenvs/pysis/src/django-grappelli/grappelli/media/
