@@ -1,0 +1,1 @@
+/work/virtualenvs/pysis/src/django-grappelli/grappelli/media/
