@@ -1,3 +1,4 @@
+Revision 96 	 2010-11-26 	 Name change 
 Revision 95 	 2010-11-23 	 Fix for groupname of staff mebers 
 Revision 94 	 2010-11-23 	 Fix for groupname of staff mebers 
 Revision 93 	 2010-11-21 	 Minor changes 
